--- a/config/ssh/config
+++ b/config/ssh/config
@@ -1,2 +1,14 @@
  Host *
   UseKeychain yes
+
+Host bitbucket.org
+  Hostname altssh.bitbucket.org
+  Port 443
+
+Host github.com
+  Hostname ssh.github.com
+  Port 443
+
+Host gitlab.com
+  Hostname altssh.gitlab.com
+  Port 443
