Set Prettier as default JSON formatter on VS Code

--- a/config/code/settings.json
+++ b/config/code/settings.json
@@ -19,6 +19,9 @@
   "[javascript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
+  "[json]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
   "[jsonc]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
