--- a/config/code/settings.json
+++ b/config/code/settings.json
@@ -2,6 +2,7 @@
   "atomKeymap.promptV3Features": true,
   "editor.fontFamily": "'Fira Code', Menlo, Monaco, 'Courier New', monospace",
   "editor.fontLigatures": true,
+  "editor.fontSize": 14,
   "editor.formatOnPaste": true,
   "editor.formatOnSave": true,
   "editor.formatOnType": true,
