Set VS Code theme to Monokai Dimmed

--- a/config/code/settings.json
+++ b/config/code/settings.json
@@ -14,7 +14,7 @@
   "explorer.confirmDragAndDrop": false,
   "telemetry.telemetryLevel": "off",
   "window.autoDetectColorScheme": true,
-  "workbench.colorTheme": "Atom One Dark",
+  "workbench.colorTheme": "Monokai Dimmed",
   "workbench.preferredDarkColorTheme": "Atom One Dark",
   "workbench.preferredLightColorTheme": "Atom One Light",
 
