--- a/config/code/settings.json
+++ b/config/code/settings.json
@@ -1,6 +1,6 @@
 {
   "atomKeymap.promptV3Features": true,
-  "editor.fontFamily": "'Fira Code', Menlo, Monaco, 'Courier New', monospace",
+  "editor.fontFamily": "'Hack Nerd Font', Monaco, 'Courier New', monospace",
   "editor.fontLigatures": true,
   "editor.fontSize": 14,
   "editor.formatOnPaste": true,
