--- a/config/code/settings.json
+++ b/config/code/settings.json
@@ -14,7 +14,7 @@
   "explorer.confirmDragAndDrop": false,
   "telemetry.telemetryLevel": "off",
   "window.autoDetectColorScheme": true,
-  "workbench.colorTheme": "Monokai",
+  "workbench.colorTheme": "Bearded Theme Coffee",
   "workbench.preferredDarkColorTheme": "Atom One Dark",
   "workbench.preferredLightColorTheme": "Atom One Light",
 
@@ -30,10 +30,16 @@
   "[jsonc]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
+  "[sql]": {
+    "editor.defaultFormatter": "sqlfluff.vscode-sqlfluff"
+  },
   "[typescript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[typescriptreact]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[yaml]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   }
 }
