Add Ctrl+L key binding to `clear\n` in Alacritty

--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -12,6 +12,9 @@ font:
 window:
   opacity: 0.8
 
+key_bindings:
+  - { key: L, mods: Control, chars: "clear\n" }
+
 # Theme: Ayu Dark
 # https://github.com/alacritty/alacritty/wiki/Color-schemes
 
