Set VS Code theme to Bearded Theme Black & Amethyst

--- a/config/code/settings.json
+++ b/config/code/settings.json
@@ -14,7 +14,7 @@
   "explorer.confirmDragAndDrop": false,
   "telemetry.telemetryLevel": "off",
   "window.autoDetectColorScheme": true,
-  "workbench.colorTheme": "Bearded Theme Coffee",
+  "workbench.colorTheme": "Bearded Theme Black & Amethyst",
   "workbench.preferredDarkColorTheme": "Atom One Dark",
   "workbench.preferredLightColorTheme": "Atom One Light",
 
