--- a/config/code/settings.json
+++ b/config/code/settings.json
@@ -14,6 +14,7 @@
   "editor.wordWrap": "on",
   "explorer.confirmDragAndDrop": false,
   "telemetry.telemetryLevel": "off",
+  "terminal.integrated.fontLigatures": true,
   "window.autoDetectColorScheme": true,
   "workbench.colorTheme": "Atom One Light",
   "workbench.preferredDarkColorTheme": "Ayu Dark",
