--- a/config/zed/settings.json
+++ b/config/zed/settings.json
@@ -3,7 +3,6 @@
   "base_keymap": "Atom",
   "telemetry": {
     "diagnostics": false,
-    "metrics": false,
-  },
-  "theme": "Andromeda",
+    "metrics": false
+  }
 }
